[package]
name = "geoip-rs"
description = "geoip-rs provides geographical information about the calling or the specified IP address"
version = "0.7.0"
authors = ["Federico Fissore <federico@fissore.org>", "Alexander Adhyatma <alexadhyatma@mailbox.org>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ffissore/geoip-rs"
keywords = ["geoip", "maxmind", "geolocation"]
homepage = "https://geoip.rs/"

[dependencies]
actix-rt = "1"
actix-web = "3"
actix-cors = "0.5.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
maxminddb = { version = "0.21.0", features = ["mmap"] }
memmap2 = "0.3.1"
dotenv = "0.15.0"
clokwerk = "^0.4.0-rc1"
ureq = "2.2.0"
flate2 = "1.0.22"
tar = "0.4.37"
anyhow = "1.0.44"